# FuriganaCtl

./: CMakeLists.txt  HISTORY.txt  README.md  README.txt  UpgradeLog.htm  base_textbox.cpp  base_textbox.h
BaseTextBox/: BaseTextBox.cpp  BaseTextBox.h  BaseTextBox_impl.h  CMakeLists.txt
FuriganaCtl/: CMakeLists.txt  FuriganaCtl.cpp  FuriganaCtl.h  FuriganaCtl_impl.h  FuriganaCtl_res.rc  furigana_api.h  resource.h
FuriganaCtl/lang/: en_US.rc  ja_JP.rc
base_textbox/: CMakeLists.txt  base_textbox.cpp  base_textbox.h  base_textbox_impl.h
dialog-test/: CMakeLists.txt  dialog-test.cpp  dialog-test_res.aps  dialog-test_res.rc
dialog-test/lang/: en_US.rc
furigana_ctl/: CMakeLists.txt  furigana_api.h  furigana_ctl.cpp  furigana_ctl.h  furigana_ctl_impl.h
furigana_gdi/: CMakeLists.txt  char_judge.cpp  char_judge.h  furigana_gdi.cpp  furigana_gdi.h
